# typlate

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yaml
typlate/: Cargo.toml  README.md
typlate/src/: lib.rs  string.rs
typlate/tests/: test.rs
typlate_derive/: Cargo.toml  README.md
typlate_derive/src/: lib.rs
