[package]
name = "typlate"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Shigma <shigma10826@gmail.com>"]
description = "Type-safe string templates with compile-time validation."
repository = "https://github.com/shigma/typlate"
documentation = "https://docs.rs/typlate"

[features]
derive = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typlate_derive = { version = "0.1.0", path = "../typlate_derive" }

[dev-dependencies]
serde_json = "1.0"
typlate = { path = ".", features = ["derive"] }
