[package]
name = "typlate"
version = "0.2.3"
edition = "2024"
license = "MIT"
authors = ["Shigma <shigma10826@gmail.com>"]
description = "Type-safe string templates with compile-time validation."
repository = "https://github.com/shigma/typlate"
documentation = "https://docs.rs/typlate"

[features]
default = ["derive"]
derive = ["dep:typlate_derive"]
full = ["derive", "serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
typlate_derive = { version = "0.2.2", path = "../typlate_derive", optional = true }

[dev-dependencies]
serde_json = "1.0"
typlate = { path = ".", features = ["full"] }
